@@ -1,5 +1,11 @@
 2007-10-19  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.glade
+	  src/wireless-security/eap-method-tls.c
+		- Allow hiding of the private key password
+
+2007-10-19  Dan Williams  <dcbw@redhat.com>
+
 	* nm-applet.conf
 		- Define and lock down the Connection.Secrets interface
 
